--- a/src/pages/user/index.less
+++ b/src/pages/user/index.less
@@ -1,279 +1,166 @@
-@import '@/style/index';
+@import '@/style/variables.less';
 
-.user-panel {
-  @media (max-width: @screen-sm-max) {
+.card-padding-no {
+  padding-left: 0;
+  padding-right: 0;
+}
 
-    .user-right {
-      min-width: 100%;
-    }
+.user-left-greeting {
+  padding: 28px 32px;
+  line-height: 28px;
+  font-size: 20px;
+  background: @bg-color-container;
+  color: @text-color-primary;
+  text-align: left;
+  border-radius: @border-radius;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  .regular {
+    margin-right: 15px;
+    font-size: 14px;
   }
 
-  @media (min-width: @screen-md-min) {
+  .logo {
+    width: 180px;
+  }
+}
 
-    .user-right {
-      min-width: 33.33%;
-    }
+.user-info-list {
+  margin-top: 16px;
+
+  .content {
+    width: 90%;
   }
 
-  .user-right {
-    transition: width .3s linear;
+  .contract {
+    width: 340px;
+    height: 88px;
+    border-radius: @border-radius;
+    margin: 8px 0;
 
-    &-greeting {
-      margin-bottom: 16px;
-      background: #fff;
-      border-radius: @border-radius;
-    }
-
-    &-trend {
-      margin-bottom: 16px;
-      background: #fff;
-      border-radius: @border-radius;
-    }
-
-    &-todo {
-      margin-bottom: 16px;
-      background: #fff;
-      border-radius: @border-radius;
-    }
-  }
-
-  .head-bar {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 8px;
-
-    .title {
+    &-title {
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      overflow: hidden;
       line-height: 24px;
-      font-family: PingFangSC;
-      font-size: 20px;
-      color: @text-color-primary;
-      text-align: left;
+      margin: 20px 0 6px;
+      font-family: PingFangSC-Regular;
+      font-size: 14px;
+      color: rgb(0 0 0 / 40%);
+    }
+
+    &-detail {
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      overflow: hidden;
+      line-height: 40px;
+      font-family: PingFangSC-Regular;
+      font-size: 14px;
+      color: rgb(0 0 0 / 90%);
+    }
+  }
+
+  .contract:last-child {
+    margin-bottom: 0;
+  }
+}
+
+.user-intro {
+  padding: 48px;
+  background: @brand-color;
+  border-radius: @border-radius;
+  color: @text-color-primary;
+
+  .name {
+    line-height: 37px;
+    font-size: 20px;
+    margin-top: 36px;
+    color: #fff;
+  }
+
+  .position {
+    line-height: 24px;
+    font-size: 14px;
+    margin-top: 8px;
+    color: #fff;
+  }
+
+  .user-info {
+    line-height: 24px;
+    font-size: 14px;
+    color: @text-color-primary;
+
+    .hiredate,
+    .del,
+    .mail {
+      display: flex;
     }
 
     .t-icon {
-      font-size: 16px;
-      color: rgba(0, 0, 0, .9);
+      height: 24px;
+      margin-right: 8px;
     }
 
-    .more {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      line-height: 22px;
-      font-family: PingFangSC-Regular;
-      font-size: 14px;
-      color: @text-color-primary;
-      cursor: pointer;
-
-      .t-icon {
-        vertical-align: bottom;
-        font-size: 20px;
-      }
-
-      &:hover {
-        color: @brand-color-8;
-      }
-    }
-  }
-
-  .user-right-panel {
-
-    .user-top {
-      padding: 48px;
-      margin: 0 0 16px 16px;
-      background: @brand-color;
-      border-radius: @border-radius;
-
-      .account {
-        text-align: left;
-        margin-bottom: 0;
-        color: @text-color-primary;
-
-        .img {
-          display: block;
-          width: 90px;
-          height: 90px;
-          border-radius: @border-radius-50;
-          border: 1px solid @brand-color;
-          background: #ebedf1;
-        }
-
-        .name {
-          line-height: 37px;
-          font-family: PingFangSC-Semibold;
-          font-size: 20px;
-          margin-top: 36px;
-          color: #fff;
-        }
-
-        .position {
-          line-height: 24px;
-          font-family: PingFangSC-Regular;
-          font-size: 14px;
-          margin-top: 8px;
-          color: #fff;
-        }
-      }
-
-      .user-info {
-        line-height: 24px;
-        font-family: PingFangSC-Regular;
-        font-size: 14px;
-        color: @text-color-primary;
-
-        .hiredate,
-        .del,
-        .mail {
-          display: flex;
-        }
-
-        .t-icon {
-          height: 24px;
-          margin-right: 8px;
-        }
-
-        .del {
-          margin: 16px 0;
-        }
-      }
-    }
-
-    .user-middle {
-      padding: 28px 32px 5px 32px;
-      margin: 0 0 16px 16px;
-      background: #fff;
-      border-radius: @border-radius;
-
-      .t-list {
-        margin: 20px 0;
-      }
-
-      .t-list-item {
-        padding: 15px 0;
-        
-        .t-list-item__meta-avatar {
-          height: 50px;
-          width: 50px;
-          margin: 0 24px 0 0;
-        }
-
-        .t-list-item__meta-description {
-          display: inline-block;
-          color: rgba(0, 0, 0, .4);
-          font-size: 14px;
-        }
-      }
-    }
-
-    .user-bottom {
-      padding: 24px 24px 5px 24px;
-      margin: 0 0 16px 16px;
-      background: #fff;
-      border-radius: @border-radius;
-
-      .content {
-        width: 70%;
-        margin: 24px 0 12px 0;
-      }
-
-      .user-right-logo {
-        width: 48px;
-      }
-    }
-  }
-
-  .user-left-panel {
-
-    .user-top {
-
-      .user-left-greeting {
-        padding: 28px 32px;
-        line-height: 28px;
-        font-family: PingFangSC-Semibold;
-        font-size: 20px;
-        color: @text-color-primary;
-        text-align: left;
-        background-color: #fff;
-        border-radius: @border-radius;
-
-        .regular {
-          margin: 0 0 0 15px;
-          vertical-align: bottom;
-          font-family: PingFangSC-Semibold;
-          font-size: 14px;
-        }
-      }
-
-      .user-left-logo {
-        float: right;
-        width: 180px;
-      }
-
-      .user-right-info {
-        margin: 16px 0;
-        padding: 32px;
-        background-color: #fff;
-        border-radius: @border-radius;
-
-        .content {
-          width: 90%;
-        }
-        
-        .contract {
-          width: 340px;
-          height: 88px;
-          border-radius: @border-radius;
-          margin: 8px 0;
-  
-          &-title {
-            white-space: nowrap;
-            text-overflow: ellipsis;
-            overflow: hidden;
-            line-height: 24px;
-            margin: 20px 0 6px 0;
-            font-family: PingFangSC-Regular;
-            font-size: 14px;
-            color: rgba(0, 0, 0, .4);
-          }
-  
-          &-detail {
-            white-space: nowrap;
-            text-overflow: ellipsis;
-            overflow: hidden;
-            line-height: 40px;
-            font-family: PingFangSC-Regular;
-            font-size: 14px;
-            color: rgba(0, 0, 0, .9);
-          }
-        }
-  
-        .contract:last-child {
-          margin-bottom: 0;
-        }
-      }
-    }
-
-    .user-bottom {
-      margin: 0 0 16px 0;
-      padding: 28px 32px;
-      background: #fff;
-      border-radius: @border-radius;
-
-      .user-bottom-container {
-        margin-top: 15px;
-
-        .unit {
-          font-size: 14px;
-          font-family: PingFangSC-Regular;
-          color: rgba(0, 0, 0, .4);
-        }
-        
-        .time-picker {
-          float: right;
-          width: 250px;
-        }
-      }
+    .del {
+      margin: 16px 0;
     }
   }
 }
 
+.product-container {
+  margin-top: 16px;
+  border-radius: @border-radius;
+
+  .content {
+    width: 70%;
+    margin: 24px 0 12px;
+  }
+
+  .logo {
+    width: 48px;
+  }
+}
+
+.content-container {
+  margin-top: 16px;
+  padding: 28px 32px;
+  background: #fff;
+  border-radius: @border-radius;
+
+  .user-bottom-container {
+    margin-top: 15px;
+
+    .unit {
+      font-size: 14px;
+      font-family: PingFangSC-Regular;
+      color: rgb(0 0 0 / 40%);
+    }
+
+    .time-picker {
+      float: right;
+      width: 250px;
+    }
+  }
+}
+
+.user-team {
+  margin-top: 16px;
+
+  .t-list-item {
+    padding: 15px 0;
+
+    .t-list-item__meta-avatar {
+      height: 50px;
+      width: 50px;
+      margin: 0 24px 0 0;
+    }
+
+    .t-list-item__meta-description {
+      display: inline-block;
+      color: rgb(0 0 0 / 40%);
+      font-size: 14px;
+    }
+  }
+}
