--- a/src/style/layout.less
+++ b/src/style/layout.less
@@ -97,7 +97,6 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      padding: 0 24px;
       width: 100%;
       &:hover {
         cursor: pointer;
@@ -105,11 +104,14 @@
     }
 
     &-logo-t-logo {
-      width: 32px;
+      height: 32px;
+      width: 100%;
     }
 
     &-logo-tdesign-logo {
+      padding: 0 24px;
       height: 32px;
+      width: 100%;
       color: @text-color-anti;
     }
 
