fix: slidenav and result icon fix

--- a/src/style/layout.less
+++ b/src/style/layout.less
@@ -116,7 +116,6 @@
     }
 
     &-logo-normal {
-      font-family: TencentSansKoreanW7;
       color: @brand-color;
       font-size: @font-size-l;
       transition: all 0.3s;
@@ -142,7 +141,9 @@
     cursor: pointer;
   }
 }
-
+.t-default-menu.t-menu--dark {
+  background: var(--td-gray-color-13);
+}
 
 .logo-container {
   cursor: pointer;
