--- a/src/pages/login/index.less
+++ b/src/pages/login/index.less
@@ -187,3 +187,17 @@
     color: @brand-color-8;
   }
 }
+
+.copyright {
+  font-size: 14px;
+  position:absolute;
+  left: 5%;
+  bottom: 64px;
+  color: @text-color-secondary;
+}
+
+@media screen and (max-height: 700px) {
+  .copyright {
+    display:none
+  }
+}
