--- a/src/style/theme/green.less
+++ b/src/style/theme/green.less
@@ -1,14 +1,27 @@
-:root[theme-color='green'],
-:root[theme-color='green'][theme-mode='dark'] {
+:root[theme-color='green'] {
   --td-brand-color: #00a870;
-  --td-brand-color-1: #dff7ed;
-  --td-brand-color-2: #a9e8cd;
-  --td-brand-color-3: #69d5ab;
-  --td-brand-color-4: #30bf8b;
+  --td-brand-color-1: #8dffd9;
+  --td-brand-color-2: #00f2a2;
+  --td-brand-color-3: #00dc92;
+  --td-brand-color-4: #00c583;
   --td-brand-color-5: #00a870;
-  --td-brand-color-6: #00935d;
-  --td-brand-color-7: #007e4a;
-  --td-brand-color-8: #006937;
-  --td-brand-color-9: #005426;
-  --td-brand-color-10: #004114;
+  --td-brand-color-6: #009a5d;
+  --td-brand-color-7: #00c583;
+  --td-brand-color-8: #00a870;
+  --td-brand-color-9: #009a5d;
+  --td-brand-color-10: #004a14;
+}
+
+:root[theme-color='green'][theme-mode='dark'] {
+  --td-brand-color: #03a56f;
+  --td-brand-color-1: #024b15;
+  --td-brand-color-2: #03965c;
+  --td-brand-color-3: #03a56f;
+  --td-brand-color-4: #04c383;
+  --td-brand-color-5: #03965c;
+  --td-brand-color-6: #03a56f;
+  --td-brand-color-7: #04c383;
+  --td-brand-color-8: #03a56f;
+  --td-brand-color-9: #05eb9f;
+  --td-brand-color-10: #91fdd9;
 }
