--- a/src/style/theme/orange.less
+++ b/src/style/theme/orange.less
@@ -1,14 +1,28 @@
-:root[theme-color='orange'],
-:root[theme-color='orange'][theme-mode='dark'] {
-  --td-brand-color-1: #ffefdb;
-  --td-brand-color-2: #ffd3a3;
-  --td-brand-color-3: #ffb473;
-  --td-brand-color-4: #ff9247;
+:root[theme-color='orange'] {
+  --td-brand-color: #ed7b2f;
+  --td-brand-color-1: #fce5d7;
+  --td-brand-color-2: #f8cdaf;
+  --td-brand-color-3: #f4b285;
+  --td-brand-color-4: #f19659;
   --td-brand-color-5: #ed7b2f;
-  --td-brand-color-6: #d6621c;
-  --td-brand-color-7: #c24c08;
-  --td-brand-color-8: #a23c00;
-  --td-brand-color-9: #872d00;
-  --td-brand-color-10: #691f00;
-  --td-brand-color: #c24c08;
+  --td-brand-color-6: #e75510;
+  --td-brand-color-7: #f19659;
+  --td-brand-color-8: #ed7b2f;
+  --td-brand-color-9: #e75510;
+  --td-brand-color-10: #7f0a02;
+  --td-brand-color: #ed7b2f;
+}
+
+:root[theme-color='orange'][theme-mode='dark'] {
+  --td-brand-color: #ed7b2f;
+  --td-brand-color-1: #7f0a02;
+  --td-brand-color-2: #9b1804;
+  --td-brand-color-3: #b62a07;
+  --td-brand-color-4: #d03e0b;
+  --td-brand-color-5: #e75510;
+  --td-brand-color-6: #ed7b2f;
+  --td-brand-color-7: #d03e0b;
+  --td-brand-color-8: #ed7b2f;
+  --td-brand-color-9: #ed7b2f;
+  --td-brand-color-10: #fce5d7;
 }
