--- a/src/style/theme/pink.less
+++ b/src/style/theme/pink.less
@@ -1,14 +1,27 @@
-:root[theme-color='pink'],
-:root[theme-color='pink'][theme-mode='dark'] {
+:root[theme-color='pink'] {
   --td-brand-color: #ed49b4;
-  --td-brand-color-1: #ffe9ff;
-  --td-brand-color-2: #ffd1fc;
-  --td-brand-color-3: #ffb2f2;
-  --td-brand-color-4: #ff8fe1;
-  --td-brand-color-5: #f6c;
+  --td-brand-color-1: #fce5f4;
+  --td-brand-color-2: #facae9;
+  --td-brand-color-3: #f7aede;
+  --td-brand-color-4: #f491d2;
+  --td-brand-color-5: #f172c5;
   --td-brand-color-6: #ed49b4;
-  --td-brand-color-7: #d42c9d;
-  --td-brand-color-8: #bc0088;
-  --td-brand-color-9: #9b006b;
-  --td-brand-color-10: #7b0052;
+  --td-brand-color-7: #f172c5;
+  --td-brand-color-8: #ed49b4;
+  --td-brand-color-9: #e80f9d;
+  --td-brand-color-10: #8f025e;
+}
+
+:root[theme-color='pink'][theme-mode='dark'] {
+  --td-brand-color: #f172c5;
+  --td-brand-color-1: #8f025e;
+  --td-brand-color-2: #ac0572;
+  --td-brand-color-3: #ca0987;
+  --td-brand-color-4: #e80f9d;
+  --td-brand-color-5: #ed49b4;
+  --td-brand-color-6: #f172c5;
+  --td-brand-color-7: #ed49b4;
+  --td-brand-color-8: #f172c5;
+  --td-brand-color-9: #f491d2;
+  --td-brand-color-10: #fce5f4;
 }
