--- a/src/style/theme/purple.less
+++ b/src/style/theme/purple.less
@@ -1,14 +1,27 @@
-:root[theme-color='purple'],
-:root[theme-color='purple'][theme-mode='dark'] {
+:root[theme-color='purple'] {
   --td-brand-color: #834ec2;
-  --td-brand-color-1: #f3e0ff;
-  --td-brand-color-2: #e6c4ff;
-  --td-brand-color-3: #d8abff;
-  --td-brand-color-4: #c68cff;
-  --td-brand-color-5: #ae78f0;
-  --td-brand-color-6: #9963d8;
-  --td-brand-color-7: #834ec2;
-  --td-brand-color-8: #6d3bac;
-  --td-brand-color-9: #572796;
-  --td-brand-color-10: #421381;
+  --td-brand-color-1: #eee6f7;
+  --td-brand-color-2: #ddceee;
+  --td-brand-color-3: #ccb6e6;
+  --td-brand-color-4: #bb9ede;
+  --td-brand-color-5: #ab87d5;
+  --td-brand-color-6: #9a6fce;
+  --td-brand-color-7: #9a6fce;
+  --td-brand-color-8: #834ec2;
+  --td-brand-color-9: #783ac3;
+  --td-brand-color-10: #4c1397;
+}
+
+:root[theme-color='purple'][theme-mode='dark'] {
+  --td-brand-color: #ab87d5;
+  --td-brand-color-1: #4c1397;
+  --td-brand-color-2: #6325b0;
+  --td-brand-color-3: #783ac3;
+  --td-brand-color-4: #834ec2;
+  --td-brand-color-5: #9a6fce;
+  --td-brand-color-6: #ab87d5;
+  --td-brand-color-7: #ab87d5;
+  --td-brand-color-8: #ab87d5;
+  --td-brand-color-9: #ccb6e6;
+  --td-brand-color-10: #eee6f7;
 }
