--- a/src/style/variables.less
+++ b/src/style/variables.less
@@ -223,13 +223,16 @@
 @screen-sm: 768px;
 @screen-md: 992px;
 @screen-lg: 1200px;
+@screen-xl: 1400px;
 
 @screen-sm-min: @screen-sm;
 @screen-md-min: @screen-md;
 @screen-lg-min: @screen-lg;
+@screen-xl-min: @screen-xl;
 
 @screen-sm-max: (@screen-md-min - 1px);
 @screen-md-max: (@screen-lg-min - 1px);
+@screen-lg-max: (@screen-xl-min - 1px);
 
 
 // 动画
