--- a/src/style/theme/cyan.less
+++ b/src/style/theme/cyan.less
@@ -1,14 +1,27 @@
-:root[theme-color='cyan'],
-:root[theme-color='cyan'][theme-mode='dark'] {
+:root[theme-color='cyan'] {
   --td-brand-color: #0594fa;
-  --td-brand-color-1: #d6f7ff;
-  --td-brand-color-2: #b2ecff;
-  --td-brand-color-3: #85daff;
-  --td-brand-color-4: #5cc5fc;
-  --td-brand-color-5: #31adfb;
+  --td-brand-color-1: #d7eefe;
+  --td-brand-color-2: #aeddfd;
+  --td-brand-color-3: #84cafd;
+  --td-brand-color-4: #58b8fc;
+  --td-brand-color-5: #29a4fb;
   --td-brand-color-6: #0594fa;
-  --td-brand-color-7: #007edf;
-  --td-brand-color-8: #0068c0;
-  --td-brand-color-9: #00549e;
-  --td-brand-color-10: #00417d;
+  --td-brand-color-7: #29a4fb;
+  --td-brand-color-8: #0594fa;
+  --td-brand-color-9: #0378df;
+  --td-brand-color-10: #01409b;
+}
+
+:root[theme-color='cyan'][theme-mode='dark'] {
+  --td-brand-color: #29a4fb;
+  --td-brand-color-1: #01409b;
+  --td-brand-color-2: #0152b3;
+  --td-brand-color-3: #0264ca;
+  --td-brand-color-4: #0378df;
+  --td-brand-color-5: #0594fa;
+  --td-brand-color-6: #29a4fb;
+  --td-brand-color-7: #0594fa;
+  --td-brand-color-8: #29a4fb;
+  --td-brand-color-9: #58b8fc;
+  --td-brand-color-10: #d7eefe;
 }
