--- a/src/style/theme/red.less
+++ b/src/style/theme/red.less
@@ -1,14 +1,27 @@
-:root[theme-color='red'],
-:root[theme-color='red'][theme-mode='dark'] {
-  --td-brand-color: #e34d59;
-  --td-brand-color-1: #ffe9e9;
-  --td-brand-color-2: #ffccce;
-  --td-brand-color-3: #ffacaf;
-  --td-brand-color-4: #ff888c;
-  --td-brand-color-5: #fb646d;
+:root[theme-color='red'] {
+  ---td-brand-color: #e34d59;
+  --td-brand-color-1: #fbe5e7;
+  --td-brand-color-2: #f7ccd0;
+  --td-brand-color-3: #f3b2b8;
+  --td-brand-color-4: #ef989f;
+  --td-brand-color-5: #ea7b84;
   --td-brand-color-6: #e34d59;
-  --td-brand-color-7: #c93043;
-  --td-brand-color-8: #b01531;
-  --td-brand-color-9: #960022;
-  --td-brand-color-10: #730021;
+  --td-brand-color-7: #ea7b84;
+  --td-brand-color-8: #e34d59;
+  --td-brand-color-9: #e42c3a;
+  --td-brand-color-10: #8d0309;
+}
+
+:root[theme-color='red'][theme-mode='dark'] {
+  --td-brand-color: #ea7b84;
+  --td-brand-color-1: #8d0309;
+  --td-brand-color-2: #ac0911;
+  --td-brand-color-3: #cc111c;
+  --td-brand-color-4: #e42c3a;
+  --td-brand-color-5: #e34d59;
+  --td-brand-color-6: #ea7b84;
+  --td-brand-color-7: #e34d59;
+  --td-brand-color-8: #ea7b84;
+  --td-brand-color-9: #ef989f;
+  --td-brand-color-10: #fbe5e7;
 }
