--- a/src/style/theme/yellow.less
+++ b/src/style/theme/yellow.less
@@ -1,14 +1,27 @@
-:root[theme-color='yellow'],
-:root[theme-color='yellow'][theme-mode='dark'] {
+:root[theme-color='yellow'] {
   --td-brand-color: #ebb105;
-  --td-brand-color-1: #fff8b8;
-  --td-brand-color-2: #ffe478;
-  --td-brand-color-3: #fbca25;
-  --td-brand-color-4: #ebb105;
-  --td-brand-color-5: #d29c00;
-  --td-brand-color-6: #ba8700;
-  --td-brand-color-7: #a37200;
-  --td-brand-color-8: #8c5f00;
-  --td-brand-color-9: #754c00;
-  --td-brand-color-10: #5e3a00;
+  --td-brand-color-1: #fde9ab;
+  --td-brand-color-2: #fbd152;
+  --td-brand-color-3: #ebb105;
+  --td-brand-color-4: #dda204;
+  --td-brand-color-5: #ca8d03;
+  --td-brand-color-6: #b67803;
+  --td-brand-color-7: #fbd152;
+  --td-brand-color-8: #ebb105;
+  --td-brand-color-9: #dda204;
+  --td-brand-color-10: #603100;
+}
+
+:root[theme-color='yellow'][theme-mode='dark'] {
+  --td-brand-color: #ca8d03;
+  --td-brand-color-1: #603100;
+  --td-brand-color-2: #764101;
+  --td-brand-color-3: #8c5201;
+  --td-brand-color-4: #a16502;
+  --td-brand-color-5: #b67803;
+  --td-brand-color-6: #ca8d03;
+  --td-brand-color-7: #764101;
+  --td-brand-color-8: #ca8d03;
+  --td-brand-color-9: #a16502;
+  --td-brand-color-10: #fde9ab;
 }
