feat(version): tdesign-vue-next new version

--- a/src/style/layout.less
+++ b/src/style/layout.less
@@ -4,7 +4,7 @@
 
 // layout rewrite
 
-.t-layout--sider {
+.t-layout__sider {
   width: fit-content;
 }
 
@@ -12,8 +12,7 @@
   margin-left: @spacer;
 }
 
-.t-layout.t-layout-has-sider {
-
+.t-layout.t-layout--with-sider {
   > .t-layout {
     flex: 1;
     min-width: 760px;
