chore: optimize color

--- a/src/style/theme/pink.less
+++ b/src/style/theme/pink.less
@@ -13,15 +13,15 @@
 }
 
 :root[theme-color='pink'][theme-mode='dark'] {
-  --td-brand-color: #f172c5;
-  --td-brand-color-1: #8f025e;
-  --td-brand-color-2: #ac0572;
-  --td-brand-color-3: #ca0987;
-  --td-brand-color-4: #e80f9d;
-  --td-brand-color-5: #ed49b4;
-  --td-brand-color-6: #f172c5;
-  --td-brand-color-7: #ed49b4;
-  --td-brand-color-8: #f172c5;
-  --td-brand-color-9: #f491d2;
-  --td-brand-color-10: #fce5f4;
+  --td-brand-color: #ff70cf;
+  --td-brand-color-1: #5b374f;
+  --td-brand-color-2: #9b066d;
+  --td-brand-color-3: #bc088a;
+  --td-brand-color-4: #d435a0;
+  --td-brand-color-5: #ed53b7;
+  --td-brand-color-6: #ff70cf;
+  --td-brand-color-7: #ff99e4;
+  --td-brand-color-8: #ff70cf;
+  --td-brand-color-9: #ffdbfd;
+  --td-brand-color-10: #fff2ff;
 }
