--- a/src/style/theme/red.less
+++ b/src/style/theme/red.less
@@ -13,15 +13,15 @@
 }
 
 :root[theme-color='red'][theme-mode='dark'] {
-  --td-brand-color: #ea7b84;
-  --td-brand-color-1: #8d0309;
-  --td-brand-color-2: #ac0911;
-  --td-brand-color-3: #cc111c;
-  --td-brand-color-4: #e42c3a;
-  --td-brand-color-5: #e34d59;
-  --td-brand-color-6: #ea7b84;
-  --td-brand-color-7: #e34d59;
-  --td-brand-color-8: #ea7b84;
-  --td-brand-color-9: #ef989f;
-  --td-brand-color-10: #fbe5e7;
+  --td-brand-color: #fb6e77;
+  --td-brand-color-1: #4f3335;
+  --td-brand-color-2: #960627;
+  --td-brand-color-3: #b01c37;
+  --td-brand-color-4: #c9384a;
+  --td-brand-color-5: #e35661;
+  --td-brand-color-6: #fb6e77;
+  --td-brand-color-7: #ff9195;
+  --td-brand-color-8: #fb6e77;
+  --td-brand-color-9: #ffd6d8;
+  --td-brand-color-10: #fff2f2;
 }
