--- a/src/style/theme/green.less
+++ b/src/style/theme/green.less
@@ -1,15 +1,14 @@
 :root[theme-color='green'] {
-  --td-brand-color: #00a870;
-  --td-brand-color-1: #8dffd9;
-  --td-brand-color-2: #00f2a2;
-  --td-brand-color-3: #00dc92;
-  --td-brand-color-4: #00c583;
+  --td-brand-color-1: #e8f8f2;
+  --td-brand-color-2: #bcebdc;
+  --td-brand-color-3: #85dbbe;
+  --td-brand-color-4: #48c79c;
   --td-brand-color-5: #00a870;
-  --td-brand-color-6: #009a5d;
-  --td-brand-color-7: #00c583;
+  --td-brand-color-6: #078d5c;
+  --td-brand-color-7: #067945;
   --td-brand-color-8: #00a870;
-  --td-brand-color-9: #009a5d;
-  --td-brand-color-10: #004a14;
+  --td-brand-color-9: #044f2a;
+  --td-brand-color-10: #033017;
 }
 
 :root[theme-color='green'][theme-mode='dark'] {
