feat: optimize tab router

--- a/src/style/layout.less
+++ b/src/style/layout.less
@@ -70,7 +70,7 @@
       z-index: 999;
     }
     &-tabs-nav + .@{prefix}-content-layout {
-      padding-top: 48px + @spacer-3;
+      padding-top:  @spacer-3;
     }
   }
 
