feat(color): remove extra dependencies

--- a/src/style/theme/index.less
+++ b/src/style/theme/index.less
@@ -1,8 +1,8 @@
+@import './default.less';
+
 @import './cyan.less';
 
 @import './green.less';
-
-@import './light.less';
 
 @import './orange.less';
 
@@ -13,5 +13,3 @@
 @import './red.less';
 
 @import './yellow.less';
-
-@import './dark.less';
