--- a/src/pages/detail/advanced/index.less
+++ b/src/pages/detail/advanced/index.less
@@ -3,7 +3,7 @@
 .product-block-container {
   .t-col-xl-4 + .t-col-xl-4 {
     @media (max-width: @screen-lg-max) {
-      .operater-gap {
+      .operator-gap {
         margin: 16px 0 0 0;
       }
     }
