--- a/src/style/theme/purple.less
+++ b/src/style/theme/purple.less
@@ -3,7 +3,7 @@
   --td-brand-color-1: #eee6f7;
   --td-brand-color-2: #ddceee;
   --td-brand-color-3: #ccb6e6;
-  --td-brand-color-4: #bb9ede;
+  --td-brand-color-4: #bb9edc;
   --td-brand-color-5: #ab87d5;
   --td-brand-color-6: #9a6fce;
   --td-brand-color-7: #9a6fce;
