--- a/src/pages/form/step/index.less
+++ b/src/pages/form/step/index.less
@@ -2,6 +2,10 @@
 
 .form-step-container {
   background-color: @bg-color-container;
+
+  .t-card {
+    padding: 8px;
+  }
 }
 
 .rule-tips {
@@ -14,4 +18,20 @@
 
 .step-form {
   padding: 24px;
+}
+
+.step-form-4 {
+  padding: 66px 0 90px 0;
+  text-align: center;
+  > .t-icon {
+    margin-bottom: 16px;
+  }
+  > .text {
+    font-size: 20px;
+    font-weight: 500;
+    margin-bottom: 8px;
+  }
+  > .button-group {
+    margin-top: 32px;
+  }
 }
