--- a/src/pages/user/index.less
+++ b/src/pages/user/index.less
@@ -1,8 +1,8 @@
 @import '@/style/variables';
 
-.card-padding-no {
-  padding-left: 0;
-  padding-right: 0;
+/deep/ .t-card__title {
+  font-size: 20px;
+  font-weight: 500;
 }
 
 .user-left-greeting {
@@ -66,7 +66,7 @@
 }
 
 .user-intro {
-  padding: 48px;
+  padding: 32px 24px;
   background: @brand-color;
   border-radius: @border-radius;
   color: @text-color-primary;
@@ -123,7 +123,6 @@
 
 .content-container {
   margin-top: 16px;
-  padding: 28px 32px;
   background: @bg-color-container;
   border-radius: @border-radius;
 }
